<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/tableLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="@dimen/tableLeft"
    android:layout_marginTop="@dimen/tableTop" >

    <TableRow
        android:id="@+id/tableRow0"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/headingView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/textPadding"
            android:text="@string/headingText"
            android:textSize="@dimen/textSize" />
    </TableRow>

    <TableRow
        android:id="@+id/tableRow1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/textPadding"
            android:text="@string/cell1"
            android:textSize="@dimen/textSize" />
    </TableRow>

    <TableRow
        android:id="@+id/tableRow2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/textPadding"
            android:text="@string/cell2"
            android:textSize="@dimen/textSize" />
    </TableRow>

    <TableRow
        android:id="@+id/tableRow3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/textPadding"
            android:text="@string/cell3"
            android:textSize="@dimen/textSize" />
    </TableRow>

    <TableRow
        android:id="@+id/tableRow4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/textPadding"
            android:text="@string/cell4"
            android:textSize="@dimen/textSize" />
    </TableRow>

    <TableRow
        android:id="@+id/tableRow5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/textPadding"
            android:text="@string/cell5"
            android:textSize="@dimen/textSize" />
    </TableRow>

    <TableRow
        android:id="@+id/tableRow6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/gotoButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/textPadding"
            android:text="@string/view"
            android:textSize="@dimen/textSize" />
    </TableRow>
    
</TableLayout>